logs/netcall.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pebble-4.3.6.dist-info'...
Listing './lib/python3.5/site-packages/netcall'...
Compiling './lib/python3.5/site-packages/netcall/base.py'...
***   File "./lib/python3.5/site-packages/netcall/base.py", line 387
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/netcall/base_client.py'...
***   File "./lib/python3.5/site-packages/netcall/base_client.py", line 97
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/netcall/base_service.py'...
***   File "./lib/python3.5/site-packages/netcall/base_service.py", line 118
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/netcall/concurrency'...
Compiling './lib/python3.5/site-packages/netcall/concurrency/eventlet.py'...
***   File "./lib/python3.5/site-packages/netcall/concurrency/eventlet.py", line 36
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/netcall/concurrency/pebble.py'...
***   File "./lib/python3.5/site-packages/netcall/concurrency/pebble.py", line 37
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/netcall/green'...
Compiling './lib/python3.5/site-packages/netcall/green/balancer.py'...
***   File "./lib/python3.5/site-packages/netcall/green/balancer.py", line 56
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/netcall/green/client.py'...
***   File "./lib/python3.5/site-packages/netcall/green/client.py", line 115
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/netcall/green/service.py'...
***   File "./lib/python3.5/site-packages/netcall/green/service.py", line 93
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/netcall/sync'...
Listing './lib/python3.5/site-packages/netcall/threading'...
Compiling './lib/python3.5/site-packages/netcall/threading/balancer.py'...
***   File "./lib/python3.5/site-packages/netcall/threading/balancer.py", line 165
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/netcall/threading/client.py'...
***   File "./lib/python3.5/site-packages/netcall/threading/client.py", line 136
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/netcall/threading/service.py'...
***   File "./lib/python3.5/site-packages/netcall/threading/service.py", line 139
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/netcall/tornado'...
Compiling './lib/python3.5/site-packages/netcall/utils.py'...
***   File "./lib/python3.5/site-packages/netcall/utils.py", line 67
    exec code in module.__dict__
            ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/netcall-0.4.2.egg-info'...
Listing './lib/python3.5/site-packages/pebble'...
Listing './lib/python3.5/site-packages/pebble/concurrent'...
Listing './lib/python3.5/site-packages/pebble/pool'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyzmq-16.0.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/rpc_mixins.py'...
***   File "./lib/python3.5/site-packages/tests/rpc_mixins.py", line 263
    print 'Received value', value
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zmq'...
Listing './lib/python3.5/site-packages/zmq/.libs'...
Listing './lib/python3.5/site-packages/zmq/asyncio'...
Listing './lib/python3.5/site-packages/zmq/auth'...
Listing './lib/python3.5/site-packages/zmq/auth/asyncio'...
Listing './lib/python3.5/site-packages/zmq/backend'...
Listing './lib/python3.5/site-packages/zmq/backend/cffi'...
Listing './lib/python3.5/site-packages/zmq/backend/cython'...
Listing './lib/python3.5/site-packages/zmq/devices'...
Listing './lib/python3.5/site-packages/zmq/eventloop'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado/platform'...
Listing './lib/python3.5/site-packages/zmq/green'...
Listing './lib/python3.5/site-packages/zmq/green/eventloop'...
Listing './lib/python3.5/site-packages/zmq/log'...
Listing './lib/python3.5/site-packages/zmq/ssh'...
Listing './lib/python3.5/site-packages/zmq/sugar'...
Listing './lib/python3.5/site-packages/zmq/tests'...
Listing './lib/python3.5/site-packages/zmq/tests/asyncio'...
Listing './lib/python3.5/site-packages/zmq/utils'...
Listing './share'...
Listing './share/python-wheels'...
